--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello World
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
+.tg .tg-9hbo{font-weight:bold;vertical-align:top}
+.tg .tg-yw4l{vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-9hbo">Date</th>
+    <th class="tg-9hbo">Paper</th>
+    <th class="tg-9hbo">Presenter</th>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">March 16th, 2017</td>
+    <td class="tg-yw4l">Mash: fast genome and metagenome distance estimation using MinHash</td>
+    <td class="tg-yw4l">Senin Pavel</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">March 30th, 2017</td>
+    <td class="tg-yw4l">Near-optimal probabilistic RNA-seq quantification</td>
+    <td class="tg-yw4l">Migun Shakya</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">April 13, 2017</td>
+    <td class="tg-yw4l">Measurement of bacterial replication rates in microbial communities</td>
+    <td class="tg-yw4l">Michaeline Albright</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">April 27, 2017</td>
+    <td class="tg-yw4l">Genome-wide selective sweeps and gene-specific sweeps in natural bacterial populations</td>
+    <td class="tg-yw4l">Migun Shakya</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">May 11, 2017</td>
+    <td class="tg-yw4l">DIVERSITY AND EVOLUTIONARY HISTORY OF PLASTIDS AND THEIR HOSTS</td>
+    <td class="tg-yw4l">Blake Hovde</td>
+  </tr>
+</table>
