Updating the schedule till August

--- a/index.html
+++ b/index.html
@@ -38,4 +38,30 @@ Bioscience Division Journal Club at LANL
     <td class="tg-yw4l">DIVERSITY AND EVOLUTIONARY HISTORY OF PLASTIDS AND THEIR HOSTS</td>
     <td class="tg-yw4l">Blake Hovde</td>
   </tr>
+    <tr>
+    <td class="tg-yw4l">June 8, 2017</td>
+    <td class="tg-yw4l">ASM Update</td>
+    <td class="tg-yw4l">Blake Hovde</td>
+  </tr>
+      <tr>
+    <td class="tg-yw4l">June 22, 2017</td>
+    <td class="tg-yw4l">OPEN</td>
+    <td class="tg-yw4l">OPEN</td>
+  </tr>
+      <tr>
+    <td class="tg-yw4l">July 6, 2017</td>
+    <td class="tg-yw4l">TBD</td>
+    <td class="tg-yw4l">Anand Kumar</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">July 20, 2017</td>
+    <td class="tg-yw4l">OPEN</td>
+    <td class="tg-yw4l">OPEN</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">August 3, 2017</td>
+    <td class="tg-yw4l">OPEN</td>
+    <td class="tg-yw4l">OPEN</td>
+  </tr>
+  
 </table>
