--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ Bioscience Division Journal Club at LANL
   </tr>
     <tr>
     <td class="tg-yw4l">June 8, 2017</td>
-    <td class="tg-yw4l">ASM Update</td>
-    <td class="tg-yw4l">Blake Hovde</td>
+    <td class="tg-yw4l">Update from ASM 2017 in New orleans</td>
+    <td class="tg-yw4l">Migun Shakya</td>
   </tr>
       <tr>
     <td class="tg-yw4l">June 22, 2017</td>
