--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ Bioscience Division Journal Club at LANL
   </tr>
       <tr>
     <td class="tg-yw4l">June 22, 2017</td>
-    <td class="tg-yw4l">OPEN</td>
-    <td class="tg-yw4l">OPEN</td>
+    <td class="tg-yw4l">Soil networks become more connected and take up more carbon as nature restoration progresses</td>
+    <td class="tg-yw4l">Renee Johansen</td>
   </tr>
       <tr>
     <td class="tg-yw4l">July 6, 2017</td>
