--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ Bioscience Division Journal Club at LANL
   </tr>
       <tr>
     <td class="tg-yw4l">July 6, 2017</td>
-    <td class="tg-yw4l">TBD</td>
-    <td class="tg-yw4l">Anand Kumar</td>
+    <td class="tg-yw4l">Canceled</td>
+    <td class="tg-yw4l">Canceled</td>
   </tr>
   <tr>
     <td class="tg-yw4l">July 20, 2017</td>
-    <td class="tg-yw4l">OPEN</td>
-    <td class="tg-yw4l">OPEN</td>
+    <td class="tg-yw4l">Discovery of nitrate–CPK–NLP signalling in central nutrient–growth networks</td>
+    <td class="tg-yw4l">Tisza Bell</td>
   </tr>
   <tr>
     <td class="tg-yw4l">August 3, 2017</td>
